<resources>
    <string name="app_name" translatable="false">Boost Up</string>
    <string name="name">name</string>
    <string name="new_password">new password</string>
    <string name="send">Send</string>
    <string name="you">You</string>
    <string name="enter_your_new_name">Enter your new name</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="dark_mode">Dark mode</string>
    <string name="sign_out">Sign out</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="join_mqa">Join MQA</string>
    <string name="jon">Jon</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="date_ntime">Date:\nTime:</string>
    <string name="light_mode">Light mode</string>
    <string name="password_field">Password field cannot be Empty</string>
    <string name="changes_saved">Changes saved successfully</string>
    <string name="your_name_field">Your name field cannot be Empty</string>
    <string name="not_changed">Your name was not changed</string>
    <string name="email_field">Email field can\'t be empty</string>
    <string name="not_match">Passwords don\'t match</string>
    <string name="quotes">Quotes</string>
    <string name="favorites">Favorites</string>
    <string name="reminder">Reminders</string>
    <string name="setting">Setting</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="auto_mode">Follow system mode</string>
    <string name="auto_lang">System language</string>
    <string name="motivation_reminder">Motivation Reminder</string>
    <string name="Reminder_scheduled_successfully">Reminder scheduled successfully.</string>
    <string name="invalid_time_date">Invalid time and date.</string>
    <string name="Share_quote_with">"Share this quote with: "</string>
    <string name="you_can">you can!</string>
    <string name="me">me!</string>
    <string name="ar">العربية</string>
    <string name="en">EN</string>
    <string name="forgot">Forgot Password</string>
    <string name="Add_reminder">Add Reminder</string>
    <string name="join_boost_up">Join Boost Up</string>
    <string name="enter_your_email">Email</string>
    <string name="select_date">Select start date</string>
    <string name="select_time">Select time</string>
    <string name="enter_your_name">User Name</string>
    <string name="stay_signed_in">Stay signed in?</string>
    <string name="successfully_sign_in">Successfully Sign In.</string>
    <string name="successfully_sign_up">Successfully Sign Up.</string>
    <string name="successfully_sign_out">Successfully Sign Out.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="out_of_app">Sign Out of App?</string>
    <string name="are_you_sure">Are you sure that you would like to sign out?</string>
    <string name="select_Reminder_time">Select Reminder time</string>
    <string name="time_fields_cannot_be_empty">Time Fields cannot be Empty.</string>
    <string name="date_fields_cannot_be_empty">Date fields cannot be empty.</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="input_fields_cannot_be_empty">The Field cannot be Empty.</string>
    <string name="invalid_password">Invalid Password.</string>
    <string name="onetime_reminder">Onetime Reminder</string>
    <string name="minimum_password">Minimum password length is 8 characters.</string>
    <string name="capital_letter">Must contain at least one capital letter.</string>
    <string name="number">Must contain at least one number</string>
    <string name="special_character">Must contain at least one special character.</string>
    <string name="every_day">Every day?</string>
    <string name="daily">Every Day</string>
    <string name="successfully_send">Successfully password reset email sent.</string>
    <string name="INACTIVE_msg">"Successfully, reminder is canceled. "</string>
    <string name="ACTIVE_msg">Successfully, reminder is activated.</string>
    <string name="REACTIVE_msg">It cannot be reactivated.</string>
    <string name="NetworkConnected_msg">No network connection.</string>
    <string name="like_removed">Quote deleted.</string>
    <string name="undo">Undo</string>
    <string name="invalid_email_or_pass">Invalid password or invalid email.</string>
    <string name="reset_password_1">Reset Password</string>

</resources>