<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".views.homeScreen.AddNotificationFragment">


        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_black"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/datePicker"
                app:layout_constraintStart_toEndOf="@+id/btnOk"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="76dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="15dp"
        />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape_black"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/timePicker" app:layout_constraintEnd_toStartOf="@+id/btnCan"
                android:layout_marginBottom="76dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="20dp"
        />

        <androidx.cardview.widget.CardView
                android:id="@+id/timePicker"
                android:layout_width="160dp"
                android:layout_height="0dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/datePicker"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="261dp"
                android:layout_marginBottom="196dp"
                app:layout_constraintBottom_toTopOf="@+id/btnOk">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                <ImageView
                        android:id="@+id/resetIcon"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginHorizontal="30dp"
                        android:src="@drawable/ic_clock"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/select_time"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/datePicker"
                android:layout_height="0dp"
                android:layout_width="160dp"
                app:layout_constraintStart_toEndOf="@+id/timePicker"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="261dp"
                android:layout_marginBottom="196dp"
                app:layout_constraintBottom_toTopOf="@+id/btnCan"
                app:cardElevation="5dp"
                app:cardCornerRadius="10dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">
                <ImageView
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginHorizontal="30dp"
                        android:src="@drawable/ic_calendar"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:text="@string/select_date"
                        android:textSize="16sp"
                        android:textStyle="bold"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/timePicker3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:clickable="true"
                android:hint="@string/select_time"
                android:visibility="gone"
                app:counterMaxLength="10"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/ic_clock" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>